Update for usage of the latest version of java